@@ -2,7 +2,8 @@
   * libgputils/gpprocessor.c, doc/gputils.lyx:
     added support for pic 14 bit enhanced devices supported by mpasmx 5.42,
     thanks to Gal Zsolt.
-  * libgputils/gpprocessor.c, header/p12f683.inc, lkr/12f683.lkr: :
+  * libgputils/gpprocessor.c, header/p12f683.inc, lkr/12f683.lkr,
+    lkr/Makefile.am, lkr/Makefile.in:
     fixed bug #2822266: TMR1GE bit missing for T1CON on 12f683
     12f683 lkr and inc files updated to mpasmx 5.42 version
 
